--- a/css/style1.css
+++ b/css/style1.css
@@ -61,7 +61,6 @@ h3{
   font-family: 'Muli', sans-serif;
   font-size:1em;
   width:80%;
-  margin: 0 auto;
   line-height: 2;
 }
 
@@ -70,7 +69,6 @@ h4{
   font-size:1.5em;
   font-weight: 800;
   width:80%;
-  margin: 0 auto;
   line-height: 2;
 }
 
@@ -189,7 +187,7 @@ h4{
   color:white;
 }
 
-.article-box{
+.row{
   width:80%;
   margin: 0 auto;
 }
@@ -198,8 +196,4 @@ h4{
   font-size:1.2em;
   font-family: 'Antic Didone', serif;
   letter-spacing: normal;
-}
-
-.img-thumbnail{
-  margin-right: 2em;
 }
