--- a/css/style1.css
+++ b/css/style1.css
@@ -197,3 +197,16 @@ h4{
   font-family: 'Antic Didone', serif;
   letter-spacing: normal;
 }
+
+/* Media Queries*/
+
+@media(max-width:1050px){
+  h3{
+    line-height: normal;
+  }
+
+  h4{
+    line-height: normal;
+    font-size: 1.25em;
+  }
+}
