--- a/css/style1.css
+++ b/css/style1.css
@@ -4,10 +4,6 @@ html {
   scroll-behavior: smooth;
 }
 
-body{
-  background-color: black;
-  color:white;
-}
 
 .hero-container {
   position: relative;
@@ -229,9 +225,10 @@ h4{
 
 @media(max-width:760px){
   .centered{
-    font-size: .9em;
+    font-size: .8em;
+    letter-spacing: .1em;
   }
   #test{
-    font-size: 1.1em;
+    font-size: 1.2em;
   }
 }
