--- a/css/style1.css
+++ b/css/style1.css
@@ -221,6 +221,10 @@ h4{
   #test{
     font-size: 1.2em;
   }
+
+  .btn-group button {
+    padding: 5px 5px; /* Some padding */
+  }
 }
 
 @media(max-width:760px){
