--- a/css/style1.css
+++ b/css/style1.css
@@ -226,6 +226,10 @@ h4{
   .btn-group button {
     padding: 10px 10px; /* Some padding */
   }
+
+  #wrapper{
+    width:100%;
+  }
 }
 
 @media(max-width:760px){
