--- a/css/style2.css
+++ b/css/style2.css
@@ -14,6 +14,40 @@ body{
   color: white;
 }*/
 
+.center{
+
+  margin:0 auto;
+  width:77%;
+  text-align: left;
+
+}
+
+
+.button {
+    background: #000;
+    color: #fff;
+    text-decoration: none;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    height: 120px;
+    padding: 30px 50px;
+    display: inline-block;
+}
+span {
+    font-size: 11px;
+    color: #ccc;;
+    display: block;
+}
+img {
+    vertical-align: middle;
+    display: inline-block;
+}
+
+.btnText {
+    vertical-align: middle;
+    display: inline-block;
+}
 
 .hero-container {
   position: relative;
