--- a/css/common1.css
+++ b/css/common1.css
@@ -137,3 +137,19 @@ a{
     text-decoration: none;
     color: #AD30FF;
   }
+
+
+  .data-viz{
+  /*background-image: url("../images/black_paper.png");*/
+  background-color: black;
+  height: 100vh;
+}
+
+.data-viz img{
+  margin-left: 25%;
+  margin-top: 20vh;
+}
+
+.data-text{
+  margin-top: 40vh;
+}
