--- a/css/style1.css
+++ b/css/style1.css
@@ -27,7 +27,7 @@ body{
 .hero-container {
   position: relative;
   text-align: center;
-  background-image: url("../images/prison-main.png");
+  background-image: url("../images/inside-prison-dark.png");
   height:100vh;
   background-repeat: no-repeat;
 }
