--- a/css/common1.css
+++ b/css/common1.css
@@ -65,7 +65,6 @@ html {
 .story-container {
   width: 100%;
   background-image: url("../images/black_paper.png");
-  color: white;
   margin-top: 0;
 }
 
@@ -109,11 +108,82 @@ h4{
   }
 
   p{
-    font-family: 'Antic Didone', serif;
-    font-size: 1.25em;
+    font-family: 'Lora', serif;
+    font-size: 20px;
     width: 60%;
     margin: 0 auto;
+    line-height: 1.5em;
+    color:white;
   }
+
+  .incarceration-graph{
+    width: 60%;
+    margin: 0 auto;
+    font-family: 'Muli', sans-serif;
+    border-top: 1px solid white;
+    border-bottom: 1px solid white;
+  }
+
+  .author{
+    font-size: 18px;
+    font-family: 'Lora', serif;
+    font-weight: bold;
+    text-align: center;
+  }
+
+.chart-title{
+  font-family: 'Muli', sans-serif;
+  font-size: 1.5em;
+  color: white;
+}
+
+.chart-description{
+    color: white;
+    font-size: 1em;
+    font-family: 'Muli', sans-serif;
+}
+
+.chart-source{
+    color: white;
+    font-family: 'Muli', sans-serif;
+    font-size: 1em;
+}
+
+
+.c3-event-rect{
+  color: black !important;
+}
+  .c3-axis-y text {
+   fill: white;
+   font-size:12px;
+}
+.c3-axis-x text {
+    font-size:12px;
+    fill:white;
+}
+
+.c3-legend-item text {
+  fill: white;
+}
+
+.c3 path, .c3 line {
+  stroke: white;
+}
+
+.tick text{
+  color: black;
+}
+
+.author span{
+    color: #D9B269;
+
+  }
+
+ .date{
+     font-size: 15px;
+     text-align: center;
+     font-family: 'Lora', serif;
+   }
 
   .col.one a{
     color: white !important;
