--- a/css/common1.css
+++ b/css/common1.css
@@ -146,8 +146,17 @@ h4{
 .chart-source{
     color: white;
     font-family: 'Muli', sans-serif;
-    font-size: 1em;
+    font-size: .8em;
+    font-style: italic;
 }
+
+.chart-author{
+    color: white;
+    font-family: 'Muli', sans-serif;
+    font-size: .8em;
+
+}
+
 
 
 .c3-event-rect{
