--- a/css/common2.css
+++ b/css/common2.css
@@ -116,12 +116,24 @@ h4{
     color:white;
   }
 
+  .border{
+    width: 30%;
+    margin: 0 auto;
+    border-top: 1px solid white;
+  }
+
+  .state{
+    font-family: 'Muli', sans-serif;
+    font-size: 1.8em;
+    color: white;
+    text-transform: uppercase;
+    text-align: center;
+  }
+
   .incarceration-graph{
     width: 60%;
     margin: 0 auto;
     font-family: 'Muli', sans-serif;
-    border-top: 1px solid white;
-    border-bottom: 1px solid white;
   }
 
   .author{
@@ -226,6 +238,8 @@ h4{
 
   }
 
+
+
  .date{
      font-size: 15px;
      text-align: center;
@@ -310,15 +324,6 @@ text-shadow: 0 0 5px #D9B269;
 
 }
 
-hr {
- /**margin-top: 0.5em;
- margin-bottom: 0.5em;
- margin-left: auto;
- margin-right: auto;**/
- width: 150px;
- border: 5px solid white;
-border-radius: 5px;
-}
 
 .highlight {
   /**background-image: linear-gradient(-100deg, rgba(255, 255, 255, 0), #D9B269 85%, rgba(255, 255, 255, 0));**/
