--- a/css/common1.css
+++ b/css/common1.css
@@ -109,7 +109,7 @@ h4{
 
   p{
     font-family: 'Lora', serif;
-    font-size: 20px;
+    font-size: 1.25em;
     width: 60%;
     margin: 0 auto;
     line-height: 1.5em;
@@ -125,7 +125,7 @@ h4{
   }
 
   .author{
-    font-size: 18px;
+    font-size: 1.125em;
     font-family: 'Lora', serif;
     font-weight: bold;
     text-align: center;
@@ -227,7 +227,7 @@ h4{
   }
 
  .date{
-     font-size: 15px;
+     font-size: 0.9375em;
      text-align: center;
      font-family: 'Lora', serif;
    }
@@ -284,26 +284,25 @@ a{
 #resentancing-data {
 /**width: 50%;**/
 font-family: 'Antic Didone', serif;
-font-size: 18px;
-
 color: white;
+
 }
 
 #number {
 font-family: 'Muli', sans-serif;
-font-size: 60px;
+font-size: 3.75em;
 /**color: #3E3F3A;**/
 text-shadow: 0 0 5px #D9B269;
 }
 
 #smallnumber {
   font-family: 'Muli', sans-serif;
-  font-size: 27px;
+  font-size: 1.6875em;
 
 }
 
 #percentage {
-  font-size: 27px;
+  font-size: 1.6875em;
   font-family: 'Muli', sans-serif;
   padding-top: 10px;
   text-align: left;
@@ -344,7 +343,7 @@ background: linear-gradient(180deg,rgba(255,255,255,0) 50%, #3E3F3A 50%);
 
 .county_nam {
   font-family: 'Muli', sans-serif;
-  font-size: 25px;
+  font-size: 1.55em;
   text-align: center;
   font-weight: lighter;
   padding: 5px;
@@ -352,12 +351,14 @@ background: linear-gradient(180deg,rgba(255,255,255,0) 50%, #3E3F3A 50%);
 
 .total {
 text-align: center;
+font-family: 'Antic Didone', serif;
+font-size: 1.5em;
 }
 
 .total_resentanced {
 text-align: center;
 font-family: 'Antic Didone', serif;
-
+font-size: 1.5em;
 }
 
 .released {
@@ -365,6 +366,7 @@ font-family: 'Antic Didone', serif;
 line-height: 1.6;
 text-align: left;
 padding: 5px;
+font-size: 1.5em;
 }
 
 .resentanced_nonlife {
@@ -372,6 +374,7 @@ font-family: 'Antic Didone', serif;
 line-height: 1.6;
 text-align: left;
 padding: 5px;
+font-size: 1.5em;
 }
 
 .given_life {
@@ -379,6 +382,7 @@ font-family: 'Antic Didone', serif;
 line-height: 1.6;
 text-align: left;
 padding: 5px;
+font-size: 1.5em;
 }
 
 .waiting_resentance {
@@ -386,27 +390,31 @@ font-family: 'Antic Didone', serif;
 line-height: 1.6;
 text-align: left;
 padding: 5px;
+font-size: 1.5em;
 }
 
 .total_minority {
   text-align: left;
   padding-top: 15px;
   font-family: 'Antic Didone', serif;
+  font-size: 1.5em;
 }
 
 .total_white {
   text-align: left;
 padding-top: 15px;
 font-family: 'Antic Didone', serif;
+font-size: 1.5em;
 }
 .asterisk {
   font-size: 30px;
   color: white;
   text-align: left;
+  font-size: 1.5em;
 }
 
 .races {
-  font-size: 13px;
+  font-size: 1.2em;
   text-align: right;
   color: white;
   padding-top: 15px;
@@ -424,8 +432,175 @@ font-family: 'Antic Didone', serif;
   font-family: 'Antic Didone', serif;
 }
 
+.hide-until-mobile{
+  display: none;
+}
+
+.break{
+  display: block;
+  margin-top: 0;
+}
+
 @media(max-width:1100px){
   #tophat{
+    font-size: .5em;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .article-title{
+    font-size: 2.5em;
+
+    }
+
+  .article-desc{
+    padding-top: 50px;
+    font-size: .9em;
+  }
+
+  .centered {
+    top: 35%;
+  }
+
+  p{
+    font-size: 1em;
+  }
+
+  .date{
     font-size: .8em;
   }
+
+  .author{
+    font-size: 1em;
+  }
+
+  .break{
+    display: none;
+  }
+
+  #tophat{
+    font-size:.9em;
+  }
+
+  .chart-title{
+    font-size: 1.2em;
+    padding-bottom: 15px;
+  }
+
+  .chart-description{
+    font-size: .9em;
+  }
+
+  .chart-author{
+    font-size: .7em;
+  }
+
+  .chart-source{
+    font-size: .7em;
+  }
+
+  .pa-county-title{
+    font-size: 1.2em;
+    padding-bottom: 15px;
+  }
+
+  .pa-county-description{
+    font-size: .9em;
+    padding-bottom: 15px;
+  }
+
+  .pa-county-author{
+    font-size: .7em;
+    padding-bottom: 15px;
+  }
+
+  .pa-county-credits{
+    font-size: .7em;
+  }
+
+  #mapid {
+    height: 270px;
+    width: 100%;
+  }
+
+  #number{
+    font-size: 3em;
+  }
+
+  #smallnumber {
+    font-size: 1.5em;
+    padding-left: 7px;
+  }
+
+  #percentage {
+    font-size: .9em;
+    padding-left: 7px;
+  }
+
+  .county_nam{
+    font-size: 1.5em;
+  }
+
+  .total {
+  font-size: 1.2em;
+  }
+
+  .total_resentanced {
+    font-size: 1.2em;
+  }
+
+  .released {
+  font-size: 1.2em;
+  padding: 0;
+  padding-left: 7px;
+  }
+
+  .resentanced_nonlife {
+  font-size: 1.2em;
+  padding: 0;
+  padding-left: 7px;
+  }
+
+  .given_life {
+    font-size: 1.2em;
+    padding: 0;
+    padding-left: 7px;
+  }
+
+  .waiting_resentance {
+    font-size: 1.2em;
+    padding: 0;
+    padding-left: 7px;
+  }
+
+  .total_minority {
+    font-size: 1.2em;
+    padding-top: 0;
+    padding-left: 7px;
+  }
+
+  .total_white {
+    font-size: 1.2em;
+    padding: 0;
+    padding-left: 7px;
+  }
+  .asterisk {
+    font-size: 30px;
+    color: white;
+    text-align: left;
+    font-size: 1.5em;
+  }
+
+  .races {
+    font-size: .9em;
+    text-align: right;
+    color: white;
+    padding-top: 15px;
+    padding-right: 15px;
+
+    font-family: 'Antic Didone', serif;
+  }
+
+
+
 }
