--- a/css/common1.css
+++ b/css/common1.css
@@ -601,6 +601,61 @@ font-size: 1.5em;
     font-family: 'Antic Didone', serif;
   }
 
-
-
 }
+
+
+
+    /* scrollama */
+
+    .scroll-graphic {
+      position: -webkit-sticky;
+      position: sticky;
+      top:0;
+      height: 50vh;
+    }
+
+    .step {
+      padding: 2rem;
+      height: 50vh;
+    }
+
+    .scroll-graphic-tab{
+      padding-top: 15px;
+      padding-bottom: 15px;
+    }
+
+
+    .col-graphic{
+      position: -webkit-sticky;
+      position: sticky;
+      bottom: 0;
+      background-color: white;
+    }
+
+
+
+
+
+    /* Large devices (desktops, 992px and up) */
+    @media (min-width: 992px) {
+
+      .scroll-graphic {
+        position: -webkit-sticky;
+        position: sticky;
+        top:0;
+        height: 100vh;
+      }
+
+      .step {
+        height: 100vh;
+      }
+
+      .col-graphic{
+        position: relative;
+      }
+
+      .scroll-text{
+        /* height: 100vh;
+        overflow: hidden; */
+      }
+    }
