--- a/css/common3.css
+++ b/css/common3.css
@@ -109,23 +109,35 @@ h4{
 
   p{
     font-family: 'Lora', serif;
-    font-size: 1.25em;
+    font-size: 20px;
     width: 60%;
     margin: 0 auto;
     line-height: 1.5em;
     color:white;
   }
 
+  .border{
+    width: 30%;
+    margin: 0 auto;
+    border-top: 1px solid white;
+  }
+
+  .state{
+    font-family: 'Muli', sans-serif;
+    font-size: 1.8em;
+    color: white;
+    text-transform: uppercase;
+    text-align: center;
+  }
+
   .incarceration-graph{
     width: 60%;
     margin: 0 auto;
     font-family: 'Muli', sans-serif;
-    border-top: 1px solid white;
-    border-bottom: 1px solid white;
   }
 
   .author{
-    font-size: 1.125em;
+    font-size: 18px;
     font-family: 'Lora', serif;
     font-weight: bold;
     text-align: center;
@@ -149,10 +161,6 @@ h4{
   width: 80%;
   text-align: left;
   padding-bottom: 10px;
-}
-
-.pa-county-description-mobile{
-  display: none;
 }
 
 .pa-county-author{
@@ -230,8 +238,10 @@ h4{
 
   }
 
+
+
  .date{
-     font-size: 0.9375em;
+     font-size: 15px;
      text-align: center;
      font-family: 'Lora', serif;
    }
@@ -288,40 +298,32 @@ a{
 #resentancing-data {
 /**width: 50%;**/
 font-family: 'Antic Didone', serif;
-color: white;
+font-size: 18px;
 
+color: white;
 }
 
 #number {
 font-family: 'Muli', sans-serif;
-font-size: 3.75em;
+font-size: 60px;
 /**color: #3E3F3A;**/
 text-shadow: 0 0 5px #D9B269;
 }
 
 #smallnumber {
   font-family: 'Muli', sans-serif;
-  font-size: 1.6875em;
+  font-size: 27px;
 
 }
 
 #percentage {
-  font-size: 1.6875em;
+  font-size: 27px;
   font-family: 'Muli', sans-serif;
   padding-top: 10px;
   text-align: left;
 
 }
 
-hr {
- /**margin-top: 0.5em;
- margin-bottom: 0.5em;
- margin-left: auto;
- margin-right: auto;**/
- width: 150px;
- border: 5px solid white;
-border-radius: 5px;
-}
 
 .highlight {
   /**background-image: linear-gradient(-100deg, rgba(255, 255, 255, 0), #D9B269 85%, rgba(255, 255, 255, 0));**/
@@ -347,7 +349,7 @@ background: linear-gradient(180deg,rgba(255,255,255,0) 50%, #3E3F3A 50%);
 
 .county_nam {
   font-family: 'Muli', sans-serif;
-  font-size: 2.2em;
+  font-size: 25px;
   text-align: center;
   font-weight: lighter;
   padding: 5px;
@@ -355,21 +357,19 @@ background: linear-gradient(180deg,rgba(255,255,255,0) 50%, #3E3F3A 50%);
 
 .total {
 text-align: center;
-font-family: 'Antic Didone', serif;
-font-size: 1.5em;
 }
 
 .total_resentanced {
 text-align: center;
 font-family: 'Antic Didone', serif;
-font-size: 1.5em;
+
 }
 
 .released {
 font-family: 'Antic Didone', serif;
 line-height: 1.6;
 text-align: left;
-font-size: 1.5em;
+padding: 5px;
 }
 
 .resentanced_nonlife {
@@ -377,43 +377,41 @@ font-family: 'Antic Didone', serif;
 line-height: 1.6;
 text-align: left;
 padding: 5px;
-font-size: 1.5em;
 }
 
 .given_life {
 font-family: 'Antic Didone', serif;
 line-height: 1.6;
 text-align: left;
-font-size: 1.5em;
+padding: 5px;
 }
 
 .waiting_resentance {
 font-family: 'Antic Didone', serif;
 line-height: 1.6;
 text-align: left;
-font-size: 1.5em;
+padding: 5px;
 }
 
 .total_minority {
   text-align: left;
+  padding-top: 15px;
   font-family: 'Antic Didone', serif;
-  font-size: 1.5em;
 }
 
 .total_white {
   text-align: left;
+padding-top: 15px;
 font-family: 'Antic Didone', serif;
-font-size: 1.5em;
 }
 .asterisk {
   font-size: 30px;
   color: white;
   text-align: left;
-  font-size: 1.5em;
 }
 
 .races {
-  font-size: 1.2em;
+  font-size: 13px;
   text-align: right;
   color: white;
   padding-top: 15px;
@@ -431,246 +429,9 @@ font-size: 1.5em;
   font-family: 'Antic Didone', serif;
 }
 
-.hide-until-mobile{
-  display: none;
-}
-
-.break{
-  display: block;
-  margin-top: 0;
-}
-
 @media(max-width:1100px){
   #tophat{
-    font-size: .5em;
-  }
-}
-
-@media only screen and (max-width: 600px) {
-  .article-title{
-    font-size: 2.5em;
-
-    }
-
-  .article-desc{
-    padding-top: 50px;
-    font-size: .9em;
-  }
-
-  .centered {
-    top: 35%;
-  }
-
-  p{
-    font-size: 1em;
-  }
-
-  .date{
     font-size: .8em;
   }
 
-  .author{
-    font-size: 1em;
-  }
-
-  .break{
-    display: none;
-  }
-
-  #tophat{
-    font-size:.9em;
-  }
-
-  .chart-title{
-    font-size: 1.2em;
-    padding-bottom: 15px;
-  }
-
-  .chart-description{
-    font-size: .9em;
-  }
-
-  .chart-author{
-    font-size: .7em;
-  }
-
-  .chart-source{
-    font-size: .7em;
-  }
-
-  .pa-county-title{
-    font-size: 1.2em;
-    padding-bottom: 15px;
-  }
-
-  .pa-county-description{
-    font-size: .9em;
-    padding-bottom: 15px;
-  }
-
-  .pa-county-author{
-    font-size: .7em;
-    padding-bottom: 15px;
-  }
-
-  .pa-county-credits{
-    font-size: .7em;
-  }
-
-  #mapid {
-    display: none;
-  }
-
-  #number{
-    font-size: 3em;
-  }
-
-  #smallnumber {
-    font-size: 1.5em;
-    padding-left: 7px;
-  }
-
-  #percentage {
-    font-size: .9em;
-    padding-left: 7px;
-  }
-
-  .county_nam{
-    font-size: 1.5em;
-  }
-
-  .total {
-  font-size: 1.2em;
-  }
-
-  .total_resentanced {
-    font-size: 1.2em;
-  }
-
-  .released {
-  font-size: 1.2em;
-  padding: 0;
-  padding-left: 7px;
-  }
-
-  .resentanced_nonlife {
-  font-size: 1.2em;
-  padding: 0;
-  padding-left: 7px;
-  }
-
-  .given_life {
-    font-size: 1.2em;
-    padding: 0;
-    padding-left: 7px;
-  }
-
-  .waiting_resentance {
-    font-size: 1.2em;
-    padding: 0;
-    padding-left: 7px;
-  }
-
-  .total_minority {
-    font-size: 1.2em;
-    padding-top: 0;
-    padding-left: 7px;
-  }
-
-  .total_white {
-    font-size: 1.2em;
-    padding: 0;
-    padding-left: 7px;
-  }
-  .asterisk {
-    font-size: 30px;
-    color: white;
-    text-align: left;
-    font-size: 1.5em;
-  }
-
-  .races {
-    font-size: .9em;
-    text-align: right;
-    color: white;
-    padding-top: 15px;
-    padding-right: 15px;
-
-    font-family: 'Antic Didone', serif;
-  }
-
-  .hide-until-mobile{
-    display: block;
-  }
-
-  .pa-county-description{
-    display: none;
-  }
-
-  .pa-county-description-mobile{
-    display: block;
-    color: white;
-    font-size: .9em;
-    font-family: 'Muli', sans-serif;
-    width: 80%;
-    text-align: left;
-    padding-bottom: 10px;
-  }
 }
-
-
-
-    /* scrollama */
-
-    .scroll-graphic {
-      position: -webkit-sticky;
-      position: sticky;
-      top:0;
-      height: 50vh;
-    }
-
-    .step {
-      padding: 2rem;
-      height: 50vh;
-    }
-
-    .scroll-graphic-tab{
-      padding-top: 15px;
-      padding-bottom: 15px;
-    }
-
-
-    .col-graphic{
-      position: -webkit-sticky;
-      position: sticky;
-      bottom: 0;
-      background-color: white;
-    }
-
-
-
-
-
-    /* Large devices (desktops, 992px and up) */
-    @media (min-width: 992px) {
-
-      .scroll-graphic {
-        position: -webkit-sticky;
-        position: sticky;
-        top:0;
-        height: 100vh;
-      }
-
-      .step {
-        height: 100vh;
-      }
-
-      .col-graphic{
-        position: relative;
-      }
-
-      .scroll-text{
-        /* height: 100vh;
-        overflow: hidden; */
-      }
-    }
