--- a/css/common1.css
+++ b/css/common1.css
@@ -440,7 +440,9 @@ font-size: 1.5em;
   margin-top: 0;
 }
 
-@media(max-width:1100px){
+
+
+@media(max-width:1024px){
   #tophat{
     font-size: .5em;
   }
@@ -615,6 +617,10 @@ font-size: 1.5em;
     width: 80%;
     text-align: left;
     padding-bottom: 10px;
+  }
+
+  .hide{
+    display: none;
   }
 }
 
