--- a/css/common2.css
+++ b/css/common2.css
@@ -429,8 +429,58 @@ font-family: 'Antic Didone', serif;
   font-family: 'Antic Didone', serif;
 }
 
-@media(max-width:1100px){
+@media(max-width:1024px){
   #tophat{
+    font-size:.9em;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .hide{
+    display: none;
+  }
+  .article-title{
+    font-size: 2.5em;
+
+    }
+
+  .article-desc{
+    font-size: .9em;
+  }
+
+
+  p{
+    font-size: 1em;
+  }
+
+  .date{
     font-size: .8em;
   }
+
+  .author{
+    font-size: 1em;
+  }
+
+
+    .chart-title{
+      font-size: 1.2em;
+      padding-bottom: 15px;
+    }
+
+    .chart-description{
+      font-size: .9em;
+    }
+
+    .chart-author{
+      font-size: .7em;
+    }
+
+    .chart-source{
+      font-size: .7em;
+    }
+
+    .state{
+      font-size: 1.5em;
+    }
+
 }
