--- a/css/common.css
+++ b/css/common.css
@@ -177,14 +177,58 @@ h4{
     color: #FFDA94;
   }
 
-  @media only screen and (max-width: 600px) {
+  .mobile-container{
+    display: none;
+  }
+
+  .home-icon{
+    display: none;
+  }
+
+  .mobile-title{
+    display: none;
+  }
+
+  .mobile-description{
+    display: none;
+  }
+
+  @media only screen and (max-width: 1024px) {
+
     .hide{
       display: none;
     }
-  }
+    .hero-container{
+      display: none;
+    }
 
-  @media(max-width:1024px){
-    #tophat{
-      font-size:.9em;
+    .mobile-container{
+      display: block;
+    }
+    .image-earl{
+      width: 100%;
+    vertical-align: top;
+    }
+    .home-icon{
+      position: fixed;
+      padding: 10px;
+    }
+    .mobile-title{
+      display: block;
+      width: 60%;
+      margin: 0 auto;
+      font-size: 2.5em;
+      color:white;
+      font-family: 'Antic Didone', serif;
+    }
+
+    .mobile-description{
+      display: block;
+      width: 60%;
+      margin: 0 auto;
+      font-size: 1em;
+      color:white;
+      font-family: 'Muli', serif;
+
     }
   }
