--- a/css/style1.css
+++ b/css/style1.css
@@ -27,7 +27,7 @@ body{
 .hero-container {
   position: relative;
   text-align: center;
-  background-image: url("../images/inside-prison-dark.png"); 
+  background-image: url("../images/inside-prison-dark.png");
   height:100vh;
   background-repeat: no-repeat;
 }
@@ -72,8 +72,8 @@ margin-right:-13%;
 
 
 .opening-text{
-  font-size:1.2em;
-  font-family: 'Antic Didone', serif;
+  font-size: 1.25em;
+  font-family: 'Lora', serif;
   letter-spacing: normal;
   padding-top:1em;
   margin:0 auto;
@@ -211,7 +211,7 @@ button:focus {
   color: black;
   padding: 10px 10px; /* Some padding */
   cursor: pointer; /* Pointer/hand icon */
-  font-family: 'Antic Didone', serif;
+  font-family: 'Lora', serif;
   font-size:1em;
   border-radius: 6px;
   text-align: left;
@@ -259,8 +259,8 @@ h1{
 .caption{
   width: 70%;
   margin: 0 auto;
-  font-size: 1.2em;
-  font-family: 'Antic Didone', serif;
+  font-size: 1.25em;
+  font-family: 'Lora', serif;
   letter-spacing: normal;
 }
 
@@ -300,7 +300,7 @@ h1{
 }
 
 .pbs-video{
-  width:80%;
+  width:78%;
   margin:0 auto;
   background-color: #3E3F3A;
   padding:10px;
@@ -319,8 +319,8 @@ h1{
 }
 
 .description-text{
-  font-size:1.2em;
-  font-family: 'Antic Didone', serif;
+  font-size:1.25em;
+  font-family: 'Lora', serif;
   letter-spacing: normal;
 }
 
@@ -338,12 +338,12 @@ h5{
 }
 
 .card-text{
-  font-family: 'Antic Didone', serif;
+  font-family: 'Lora', serif;
   color: white;
 }
 
 .btn{
-  font-family: 'Antic Didone', serif;
+  font-family: 'Lora', serif;
 }
 
 .btn-primary{
