--- a/css/style1.css
+++ b/css/style1.css
@@ -309,8 +309,9 @@ h1{
 .video-caption{
   font-family: 'Muli', sans-serif;
   font-size: .9em;
-  margin-top:20px;
+  margin-top: 20px;
   color:white;
+  text-align: center;
 }
 
 .row{
