--- a/css/hogan.css
+++ b/css/hogan.css
@@ -458,6 +458,10 @@ h1{
   #tophat{
     font-size: .5em;
   }
+
+  p{
+    width: 70%;
+  }
 }
 
 @media only screen and (max-width: 600px) {
@@ -475,10 +479,27 @@ h1{
     top: 35%;
   }
 
-  p{
-    font-size: 1em;
-  }
 
+    p{
+      font-size: 1.1em;
+      width: 80%;
+    }
+
+    .incarceration-graph{
+      width: 80%;
+    }
+
+    .about{
+      width: 70%;
+    }
+
+    .final-credits{
+      width: 70%;
+    }
+
+    .more{
+      width: 80%;
+    }
   .date{
     font-size: .8em;
   }
