--- a/css/other-states.css
+++ b/css/other-states.css
@@ -479,6 +479,10 @@ font-family: 'Antic Didone', serif;
   #tophat{
     font-size:.9em;
   }
+
+  p{
+    width: 70%;
+  }
 }
 
 @media only screen and (max-width: 600px) {
@@ -495,9 +499,27 @@ font-family: 'Antic Didone', serif;
   }
 
 
-  p{
-    font-size: 1em;
-  }
+
+    p{
+      font-size: 1.1em;
+      width: 80%;
+    }
+
+    .incarceration-graph{
+      width: 80%;
+    }
+
+    .about{
+      width: 70%;
+    }
+
+    .final-credits{
+      width: 70%;
+    }
+
+    .more{
+      width: 80%;
+    }
 
   .date{
     font-size: .8em;
