--- a/css/supreme-court.css
+++ b/css/supreme-court.css
@@ -231,7 +231,6 @@ a{
     color: #FFDA94;
   }
 
-
   .data-viz{
   /*background-image: url("../images/black_paper.png");*/
   background-color: black;
@@ -452,6 +451,148 @@ h1{
   margin-top: 0;
 }
 
+
+
+
+.timeline {
+  list-style: none;
+  padding: 20px 0 20px;
+  position: relative;
+}
+
+.timeline:before {
+  top: 0;
+  bottom: 0;
+  position: absolute;
+  content: " ";
+  width: 3px;
+  background-color: #eeeeee;
+  left: 50%;
+  margin-left: -1.5px;
+}
+
+.timeline > li {
+  margin-bottom: 20px;
+  position: relative;
+}
+
+.timeline > li:before,
+.timeline > li:after {
+  content: " ";
+  display: table;
+}
+
+.timeline > li:after {
+  clear: both;
+}
+
+.timeline > li:before,
+.timeline > li:after {
+  content: " ";
+  display: table;
+}
+
+.timeline > li:after {
+  clear: both;
+}
+
+.timeline > li > .timeline-panel {
+  width: 46%;
+  float: left;
+  border: 1px solid #d4d4d4;
+  border-radius: 2px;
+  padding: 20px;
+  position: relative;
+  -webkit-box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+}
+
+.timeline > li > .timeline-panel:before {
+  position: absolute;
+  top: 26px;
+  right: -15px;
+  display: inline-block;
+  border-top: 15px solid transparent;
+  border-left: 15px solid #ccc;
+  border-right: 0 solid #ccc;
+  border-bottom: 15px solid transparent;
+  content: " ";
+}
+
+.timeline > li > .timeline-panel:after {
+  position: absolute;
+  top: 27px;
+  right: -14px;
+  display: inline-block;
+  border-top: 14px solid transparent;
+  border-left: 14px solid #fff;
+  border-right: 0 solid #fff;
+  border-bottom: 14px solid transparent;
+  content: " ";
+}
+
+.timeline > li > .timeline-badge {
+  color: #fff;
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  font-size: 1em;
+  text-align: center;
+  position: absolute;
+  top: 16px;
+  left: 50%;
+  margin-left: -25px;
+  background-color: #999999;
+  z-index: 100;
+  border-top-right-radius: 50%;
+  border-top-left-radius: 50%;
+  border-bottom-right-radius: 50%;
+  border-bottom-left-radius: 50%;
+}
+
+.timeline > li.timeline-inverted > .timeline-panel {
+  float: right;
+}
+
+.timeline > li.timeline-inverted > .timeline-panel:before {
+  border-left-width: 0;
+  border-right-width: 15px;
+  left: -15px;
+  right: auto;
+}
+
+.timeline > li.timeline-inverted > .timeline-panel:after {
+  border-left-width: 0;
+  border-right-width: 14px;
+  left: -14px;
+  right: auto;
+}
+
+.timeline-badge.primary {
+  background-color: #2e6da4 !important;
+}
+
+
+.timeline-title {
+  margin-top: 0;
+  color: white;
+  font-family: 'Muli', sans-serif;
+  font-size: 1.5em;
+}
+
+.timeline-sub{
+  color: #D9B269;
+  font-family: 'Muli', sans-serif;
+  font-size: 1.2em;
+}
+
+.timeline-body{
+  color: white;
+  font-family: 'Lora', serif;
+  font-size: 1.1em;
+}
+
+
 @media(max-width:1024px){
   #tophat{
     font-size: .5em;
@@ -460,22 +601,16 @@ h1{
   p{
     width: 70%;
   }
-
-  .incarceration-graph{
-    width: 70%;
+  .timeline-title{
+    font-size: 1.1em;
   }
+.timeline-sub{
+      font-size: 1em;
+    }
 
-  .more{
-    width: 70%;
-  }
-
-  .about{
-    width: 60%;
-  }
-
-  .final-credits{
-    width: 60%;
-  }
+    .timeline-body{
+          font-size: .9em;
+        }
 }
 
 @media only screen and (max-width: 600px) {
@@ -494,26 +629,36 @@ h1{
   }
 
 
-      p{
-        font-size: 1.1em;
-        width: 80%;
+    p{
+      font-size: 1.1em;
+      width: 80%;
+    }
+
+    .timeline-title{
+      font-size: 1.1em;
+    }
+  .timeline-sub{
+        font-size: 1em;
       }
 
-  .incarceration-graph{
-    width: 80%;
-  }
+      .timeline-body{
+            font-size: .9em;
+          }
+    .incarceration-graph{
+      width: 80%;
+    }
 
-  .about{
-    width: 70%;
-  }
+    .about{
+      width: 70%;
+    }
 
-  .final-credits{
-    width: 70%;
-  }
+    .final-credits{
+      width: 70%;
+    }
 
-  .more{
-    width: 80%;
-  }
+    .more{
+      width: 80%;
+    }
 
   .date{
     font-size: .8em;
@@ -671,6 +816,7 @@ h1{
     display: none;
   }
 }
+
 
 
     /* scrollama */
