--- a/css/pa-article.css
+++ b/css/pa-article.css
@@ -480,8 +480,16 @@ h1{
 }
 
 @media(max-width:1024px){
-  #tophat{
-    font-size: .5em;
+  #topbar{
+    font-size: .8em;
+  }
+
+  #home{
+    font-size: .8em;
+  }
+
+  #social-icons{
+    font-size: .8em;
   }
 
   p{
@@ -491,6 +499,8 @@ h1{
   .incarceration-graph{
     width: 70%;
   }
+
+
 
   .more{
     width: 70%;
@@ -506,6 +516,24 @@ h1{
 }
 
 @media only screen and (max-width: 600px) {
+
+  #topbar{
+    font-size: .6em;
+  }
+
+  #home{
+    font-size: .8em;
+  }
+
+  #social-icons{
+    font-size: .8em;
+  }
+
+  .hide-on-mobile{
+    display: none;
+  }
+
+
   .article-title{
     font-size: 2.5em;
 
