media query adds

--- a/css/lifer-profiles.css
+++ b/css/lifer-profiles.css
@@ -484,6 +484,18 @@ font-family: 'Antic Didone', serif;
 }
 
 @media(max-width:1024px){
+  #topbar{
+    font-size: .8em;
+  }
+
+  #home{
+    font-size: .8em;
+  }
+
+  #social-icons{
+    font-size: .8em;
+  }
+
   #tophat{
     font-size:.9em;
   }
@@ -494,6 +506,19 @@ font-family: 'Antic Didone', serif;
 }
 
 @media only screen and (max-width: 600px) {
+
+    #topbar{
+      font-size: .6em;
+    }
+
+    #home{
+      font-size: .8em;
+    }
+
+    #social-icons{
+      font-size: .8em;
+    }
+    
   .hide{
     display: none;
   }
