--- a/css/other-states.css
+++ b/css/other-states.css
@@ -504,6 +504,19 @@ font-family: 'Antic Didone', serif;
 }
 
 @media(max-width:1024px){
+
+  #topbar{
+    font-size: .8em;
+  }
+
+  #home{
+    font-size: .8em;
+  }
+
+  #social-icons{
+    font-size: .8em;
+  }
+  
   #tophat{
     font-size:.9em;
   }
@@ -514,6 +527,19 @@ font-family: 'Antic Didone', serif;
 }
 
 @media only screen and (max-width: 600px) {
+
+  #topbar{
+    font-size: .6em;
+  }
+
+  #home{
+    font-size: .8em;
+  }
+
+  #social-icons{
+    font-size: .8em;
+  }
+
   .hide{
     display: none;
   }
