--- a/css/supreme-court.css
+++ b/css/supreme-court.css
@@ -622,6 +622,19 @@ h1{
 
 
 @media(max-width:1024px){
+
+  #topbar{
+    font-size: .8em;
+  }
+
+  #home{
+    font-size: .8em;
+  }
+
+  #social-icons{
+    font-size: .8em;
+  }
+  
   #tophat{
     font-size: .5em;
   }
@@ -642,6 +655,20 @@ h1{
 }
 
 @media only screen and (max-width: 600px) {
+
+  #topbar{
+    font-size: .6em;
+  }
+
+  #home{
+    font-size: .8em;
+  }
+
+  #social-icons{
+    font-size: .8em;
+  }
+
+
   .article-title{
     font-size: 2.5em;
 
