--- a/css/hogan.css
+++ b/css/hogan.css
@@ -516,6 +516,10 @@ h1{
     #social-icons{
       font-size: .8em;
     }
+
+    .hide-on-mobile{
+      display: none;
+    }
     
   .article-title{
     font-size: 2.5em;
