--- a/css/pa-article.css
+++ b/css/pa-article.css
@@ -67,6 +67,8 @@ html {
   text-align: center;
 }
 
+
+
 .article-title{
   font-family: 'Antic Didone', serif;
   font-size: 4em;
@@ -258,6 +260,11 @@ a{
     color: #FFDA94;
   }
 
+.photo-caption{
+  font-size: .9em;
+  font-family: 'Muli', sans-serif;
+  padding-top: 10px;
+}
 
   .data-viz{
   /*background-image: url("../images/black_paper.png");*/
