--- a/css/style1.css
+++ b/css/style1.css
@@ -23,7 +23,7 @@ body{
   padding-top: 5px;
   text-align: center;
   margin: 0 auto;
-  text-shadow: 0.5px 0.5px #D9B269;
+  /* text-shadow: 0.5px 0.5px #D9B269; */
 }
 
 
