--- a/css/other-states.css
+++ b/css/other-states.css
@@ -162,6 +162,8 @@ h4{
     width: 60%;
     margin: 0 auto;
     font-family: 'Muli', sans-serif;
+    border-top: 1px solid white;
+    border-bottom: 1px solid white;
   }
 
   .author{
@@ -520,7 +522,7 @@ font-family: 'Antic Didone', serif;
   .hide-on-mobile{
     display: none;
   }
-  
+
   #tophat{
     font-size:.9em;
   }
