--- a/css/style1.css
+++ b/css/style1.css
@@ -443,6 +443,10 @@ img {
     font-size: .8em;
   }
 
+  #social-icons{
+    font-size: .8em;
+  }
+
 
   .centered{
     width: 90%;
@@ -499,6 +503,10 @@ img {
 @media only screen and (max-width: 600px) {
   #topbar{
     font-size: .6em;
+  }
+
+  #social-icons{
+    font-size: .8em;
   }
 
   .centered{
